add secrets manager research

--- a/01.ParameterStoreAndSecretsManager.md
+++ b/01.ParameterStoreAndSecretsManager.md
@@ -2,15 +2,17 @@
 
 ## 기능비교 
 
-|기능|SSM Parameter Store| AWS Secrets Manager|
-|---|---|---|
-|저장문자 길이 4096문자| O| O|
-|KMS로 암호화 될 수 있는지| O| O|
-|CloudFormation 에 참조가능한지| O| O|
-|내장 비밀번호 생성기능| X| O|
-|자동 시크릿 로테이션| X| O|
-|추가비용| X| O|
-|타계정접근| X| O|
+||Secrets Manager| Parameter Store Advanced| Parameter Store Standard|
+|---|---|---|---|
+|저장소크기 Size| 64KB| 8KB| 4KB|
+|계정당 시크릿 개수| 40,000| 100,000| 10,000|
+|최대 처리량| 5,000| 3,000| 3,000|
+|시크릿 로테이션| YES| NO| NO|
+|시크릿 생성| YES| NO| NO|
+|KMS 암호화| YES| YES| YES|
+|클라우드 포메이션 통합| YES| YES| YES|
+|추가비용| 시크릿당 월비용| 파라미터당 월비용| 무료 |
+|타계정접근| YES| NO| NO|
 
 ## [Use Case] Parameter store
 
@@ -20,3 +22,6 @@
 
 - 암호화된 값을 저장하고, 시크릿 로테이션을 쉽게 하고자 하는 경우 사용.
 - 정기적인 암호 교체가 필요한경우 사용. 
+
+- [AWS 계정간 AWS Secrets Manager 보안정보 공유](https://aws.amazon.com/ko/premiumsupport/knowledge-center/secrets-manager-share-between-accounts/)
+- [암호자동교체](https://docs.aws.amazon.com/ko_kr/secretsmanager/latest/userguide/rotate-secrets_turn-on-for-other.html)  
