--- a/research/03.WorkingWithSecretsManagerInPythonUsingBoto3.md
+++ b/research/03.WorkingWithSecretsManagerInPythonUsingBoto3.md
@@ -1,5 +1,7 @@
 # WORKING WITH SECRETS MANAGER IN PYTHON USING BOTO3
 
+from: https://hands-on.cloud/working-with-secrets-manager-in-python-using-boto3/
+
 - AWS Secrets Manager 는 어플리케이션, 서비스, IT리소스 등 보안 정보에 접근을 보호하는데 도움을 준다. 
 - 이 서비스를 이용하면 쉽게 로테이트, 관리, 데이터베이스 크레덴셜을 순회할 수 있다.
 - API 키, 패스워드 그리고 다른 시트릿을 이들의 라이프사이클을 통해 동작한다. 
@@ -89,3 +91,220 @@ aws ssm get-parameters-by-path /my-app/prod
 - 여기에서 다음을 확인할 수 있다. 
 
 ![secrets03](https://hands-on.cloud/wp-content/uploads/2021/08/aws_secret_value.png?ezimgfmt=ng:webp/ngcb1)
+
+## How to create a secret in AWS Secrets Manager using Boto3?
+
+- Secrets Manager 는 암호화되 시크릿을 버젼 모음에 저장한다. 
+- 각 버젼은 암호화된 시크릿 데이터의 복제본을 포함한다. 
+- 각 버젼은 하나 혹은 여러개의 스테이징 레벨과 연관되며, 로테이션 사이클에 버젼으로 저장된다. 
+
+- Boto3 Secrets Manager 'client' 는 저수준의 클래스로, AWS Secrets Manager에 접근하는 방법을 제공한다. 
+- 모든 서비스 API들은 Boto3 클라이언트 맵에서 AWS service API와 1:1 로 매핑된다. 
+
+- 시크릿 스트링 매개 변수에 텍스트를 입력하거나 SecretBinary 매개변수에 바이너리 데이터를 입력하여 암호화할 비밀 데이터를 제공할 수 있지만 둘 다 제공할수는 없다. 
+- 만약 SecretString 혹은 SecretBinary 를 포함하면 Secrets Manager는 초기 암호 버젼도 생성하고, 스테이징 레이블 AWSCURRENT 를 새 버젼으로 자동으로 연결할 수 있다. 
+
+```py
+#!/usr/bin/env python3
+
+import boto3
+
+client = boto3.client('secretsmanager')
+
+response = client.create_secret(
+    Name='DatabaseProdSecrets',
+    SecretString='{"username": "prod", "password": "hello-world-prod"}'
+)
+```
+
+- 만약 custom KMS 키를 제공이 필요하다. 이때 KmsKeyId 파라미터를 create_secret() 메소드에 이용할 수 있다. 
+- 이는 ARN, Key ID 혹은 Amazon Web Service KMS 커스터머 마스터 키 (CMK) 의 ARN 파라미터를 사용할 수 있다. 
+- KmsKeyId를 제공하지 않으면 Secrets Manager는 계정의 기본 CMK(aws/secrets manager 이라는 이름의 CMK)를 사용한다. 
+- 해당 이름의 경우 Amazon Web Services KMS CMK가 존재하지 않는 경우 Secrets Manager는 버젼의 SecretString또는 SecretBinary필드를 처음 암호화해야 할 때 자동으로 생성한다. 
+
+## How to list secrets in AWS Secrets Manager using Boto3?
+
+- list_secrets() 메서드를 사용하여 AWS Secrets Manager에 저장된 모든 암호를 나열할 수 있다. 
+- 시크릿을 리스팅 할때 당신은 특정 개수의 결과를 제한하고 필터할 수 있다. 
+
+- 노트: 
+  - 암호화된 필드 SecretString과 SecretBinary 들은 출력에 포함되지 않는다. 
+  - 정보를 얻기 위해서 당신은 GetSecretValue 오퍼레이션을 부를 필요가 있다. 
+
+```py
+#!/usr/bin/env python3
+
+import boto3
+
+client = boto3.client('secretsmanager')
+
+response = client.list_secrets()
+
+print(response['SecretList'])
+```
+
+## How to retrieve a secret value from AWS Secrets Manager using Boto3?
+
+- AWS Secrets Manager 로 부터 시크릿을 Boto3를 이용하여 조회할때, get_secret_value() 메소드를 이용할 필요가 있다. 
+- 다음 코드 예제들은 DatabaseProdSecrets 의 SecretId(또는 생성 시 Name)를 사용하여 비밀을 가져온다. 
+- Boto3를 이용한 [Secrets Manager document](https://boto3.amazonaws.com/v1/documentation/api/latest/reference/services/secretsmanager.html)를 참조하자. 
+
+- 당신은 또한 SecretString 값을 파싱할 필요가 있고, 이는 json.loads 를 이용하여 JSON 문자를 Python 딕셔너리로 변환하는 값을 구문 분석해야한다. 
+
+```py
+#!/usr/bin/env python3
+
+import boto3 
+import json 
+
+client = boto3.client('secretsmanager')
+
+response = client.get_secret_value(
+    SecretId='DatabaseProdSecrets'
+)
+
+database_secrets = json.loads(response['SecretString'])
+
+print(database_secrets['password'])
+```
+
+## Permissions required to retrieve a secret
+
+- 시크릿을 조회하기 위해서 secretsmanager:GetSecretValue API 를 허용할 필요가 있다. 이는 IAM에서 설정한다. 
+- 만약 customer-managed Amazon Web Services KMS 키를 이용하여 암호화 한다면 kms:Decrypt 퍼미션을 주어야한다. 
+- 반대로 SecretsManagerReadWrite 정책을 사용자에게 부여할 수 있다. 이는 AWS Secrets Manager를 관리할 수 있도록 허용한다. 
+
+![secrets04](https://hands-on.cloud/wp-content/uploads/2021/08/iam_secrets_manager_policy.jpg?ezimgfmt=ng:webp/ngcb1)
+
+## Retrieve a secret values from the Python code 
+
+- AWS Secrets Manager 로 시크릿 값을 Boto3를 이용하여 접근하다면, get_secret_value() 메소드를 이용하면 된다. 
+
+```py
+#!/usr/bin/env python3
+
+import boto3
+import json 
+
+client = boto3.client('secretsmanager')
+
+response = client.get_secret_value(
+    SecretId='DatabaseProdSecrets'
+)
+
+database_secrets = json.loads(response['SecretString'])
+
+print(database_secrets['password'])
+```
+
+## Retrieve a secret values in Bash 
+
+- AWS CLI 를 이용하여 secret value를 이용할때 다음과 같이 수행할 수 있다. 
+
+```py
+aws secretsmanager get-secret-value --secret-id <SecretId>
+
+```
+
+## Retrieve a secret values in Powershell
+
+- 각 서비스에 대한 PowerShell용 AWS 도구의 cmdlet은 서비스에 대해 AWS SDK에서 제공하는 방법을 기반으로 한다. 
+- Get-SECSecretValue cmdlet을 이용하여 시크릿을 조회할 수 있다. 
+- 더 많은 내용은 https://docs.aws.amazon.com/powershell/latest/reference/items/Get-SECSecretValue.html 을 참조하자. 
+
+```py
+Get-SECSecretValue -SecretId <SecretId>
+
+```
+
+## How to update an existing secret in AWS Secrets Manager using Boto3?
+
+- 업데이트 에는 2가지 메소드가 있다. 
+- 첫번째는 put_secret_value() 를 이용하는 것으로, 새로운 버젼을 생성하고, 시크릿에 첨부한다. 
+
+```py
+#!/usr/bin/env python3
+
+import boto3 
+import json 
+
+client = boto3.client('secretsmanager')
+
+response = client.put_secret_value(
+    SecretId='DatabaseProdSecrets',
+    SecretString='{"username": "prod", "password": "hello-world-updated2"}'
+)
+
+print(response)
+```
+
+- 다음은 update_secret() 메소드이다. 
+- 이 메소드는 지정된 시크릿의 상세부분을 변경한다. 
+- 만약 ClientRequestToken 을 포함한다면 그리고 SecretString 혹은 SecretBinary 둘다 새로운 버젼을 생성하고, secret을 첨부한다. 
+
+```py
+#!/usr/bin/env python3
+
+import boto3 
+import json
+
+client = boto3.client('secretsmanager')
+
+response = client.update_secret(
+    SecretId='DatabaseProdSecrets',
+    Description='Description updated'
+)
+
+print(response)
+```
+
+## How to create a new version of the secret in AWS Secrets Manager using Boto3?
+
+- 당신은 put_secret_value 혹은 update_secret 을 이용하여 새로운 버젼을 생성할 수 있다. 
+- put_secret_value 는 새로운 버젼을 생성하고 시크릿을 첨부할 수 있다. 
+- update_secret 메소드는 새로운 버젼을 생성하고, 시크릿에 첨부한다. ClientRequestToken 과 SecretString 또는 SecretBinary 매배변수가 사용될 때 비밀에 첨부된 새 버젼을 생성한다. 
+
+## How to delete a secret in AWS Secrets Manager using Boto3?
+
+- delete_secret() 함수를 이용할 수 있다. 이는 시크릿을 삭제하고, 모든 버젼을 제거한다. 
+- 비밀을 복원할 수 있는 복구 기간을 선택적으로 포함 할 수 있다. 
+- 만약 복구 기간 값을 지정하지 않으면 30일 이내에 비밀이 삭제된다. 
+
+- 복구 윈도우가 끝나기 전에 언제든지 RestoreSecret을 이용하여 DeletionDate 를 제거할 수 있다. 그리고 시크릿의 삭제를 제거할 수 있다. 
+
+```py
+#!/usr/bin/env python3
+
+import boto3
+
+client = boto3.client('secretsmanager')
+
+response = client.delete_secret(
+    SecretId='DatabaseProdSecrets',
+    RecoveryWindowInDays=10,
+    ForceDeleteWithoutRecovery=False
+)
+
+print(response)
+```
+
+- recovery window 가 끝나기 전에 삭제된 시크릿을 복구하면 당신은 restore_secret() 메소드를 이요할 수 있다. 
+
+```py
+#!/usr/bin/env python3
+
+import boto3
+
+client = boto3.client('secretsmanager')
+
+response = client.restore_secret(
+    SecretId='DatabaseProdSecrets'
+)
+
+print(response)
+```
+
+## Summary
+
+- 이 아티클은 파이썬을 어떻게 이용할지를 보여준다. 
+- 시크릿 생성, 수정, 삭제를 Boto3를 이용하여 사용해 보았다. 
