--- a/01.ParameterStoreAndSecretsManager.md
+++ b/01.ParameterStoreAndSecretsManager.md
@@ -11,7 +11,7 @@
 |시크릿 생성| YES| NO| NO|
 |KMS 암호화| YES| YES| YES|
 |클라우드 포메이션 통합| YES| YES| YES|
-|추가비용| 시크릿당 월비용| 파라미터당 월비용| 무료 |
+|추가비용| 시크릿당 월비용 ($0.40/월), 호출 1만건당 0.05USD| 파라미터당 월비용, 호출 1만간덩 0.05USD| 무료 |
 |타계정접근| YES| NO| NO|
 
 ## [Use Case] Parameter store
